--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  <h1>My HTML adventure</h1>
+  <p>
+    Download <strong><em>EMMET</em></strong>. But you can check out
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN</a>
+    for help.
+  </p>
+  <table>
+    <thead>
+      <th>
+        <tr></tr>
+        <tr></tr>
+        <tbody>
+          <tb>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+            </tr>
+          </tb>
+        </tbody>
+      </th>
+    </thead>
+  </table>
+</body>
+</html>
