--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hello</h1>
+<p>Hi! <strong>How are you? </strong><em>Doing well?</em>Maybe go <a href="#">here</a></p>
+
+</body>
+</html>
