--- a/index.html
+++ b/index.html
@@ -7,8 +7,40 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
-<p>Hi! <strong>How are you? </strong><em>Doing well?</em>Maybe go <a href="#">here</a></p>
+    <h1>My HTML adventure</h1>
+    <p>
+        Hi! <strong>How are you? </strong>
+        <em>Doing well?</em>
+        Maybe go learn some 
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> 
+    </p>
 
+
+    <table>
+        <thead>
+        <tr>
+            <th>Element name</th>
+            <th>Display value</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>h1</td>
+            <td>block</td>
+        </tr>
+        <tr>
+            <td>p</td>
+            <td>block</td>
+        </tr>
+        <tr>
+            <td>strong</td>
+            <td>inline</td>
+        </tr>
+        <tr>
+            <td>em</td>
+            <td>inline</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
